--- a/docs/specification.tex
+++ b/docs/specification.tex
@@ -59,35 +59,29 @@ Bristol, BS8 1UB, United Kingdom.\\
 
 \appendix
 
-\newpage
+\clearpage
 \section{Instruction syntax   overview}
-\label{appx:syntax}
+\label{appx:instr_syntax}
 
-\import{./specification/}{appx-syntax.tex}
+\import{./specification/}{appx-instr_syntax.tex}
 
-\newpage
+\clearpage
 \section{Instruction encoding overview} 
-\label{appx:encoding}
+\label{appx:instr_encode}
 
-\import{./specification/}{appx-encoding.tex}
+\import{./specification/}{appx-instr_encode.tex}
 
-\newpage
+\clearpage
 \section{Related work}
 \label{appx:related}
 
 \import{./specification/}{appx-related.tex}
 
-\newpage
+\clearpage
 \section{Design notes}
 \label{appx:design}
 
 \import{./specification/}{appx-design.tex}
-
-\newpage
-\section{Changelog}
-\label{appx:changelog}
-
-\import{./specification/}{appx-changelog.tex}
 
 % =============================================================================
 
