--- a/docs/specification/appx-design.tex
+++ b/docs/specification/appx-design.tex
@@ -29,7 +29,7 @@
          or
       b) a (uncached) scratch-pad memory,
       by the co-processor alone.
-\item Per \REFSEC{sec:spec:instr:2:4}, 
+\item Per \REFSEC{sec:spec:instruction:2:4}, 
       \VERB[RV]{xc.mix.l}
       and
       \VERB[RV]{xc.mix.h}
