--- a/docs/specification/appx-instr_syntax.tex
+++ b/docs/specification/appx-instr_syntax.tex
@@ -22,7 +22,7 @@ Class                 & Syntax                     & Section                    
 \end{tabular}
 \end{center}
 \caption{An overview of instruction syntax, including reference to associated semantics: class $1$,   per \REFSEC{sec:spec:instruction:1}.}
-\label{tab:syntax:1}
+\label{tab:instr_syntax:1}
 \end{table}                                                                      
 
 % -----------------------------------------------------------------------------
@@ -40,7 +40,7 @@ Class                 & Syntax                     & Section                    
 \end{tabular}
 \end{center}
 \caption{An overview of instruction syntax, including reference to associated semantics: class $2.1$, per \REFSEC{sec:spec:instruction:2:1}.}
-\label{tab:syntax:2:1}
+\label{tab:instr_syntax:2:1}
 \end{table}                                                                      
 
 % -----------------------------------------------------------------------------
@@ -59,7 +59,7 @@ Class                 & Syntax                     & Section                    
 \end{tabular}
 \end{center}
 \caption{An overview of instruction syntax, including reference to associated semantics: class $2.2$, per \REFSEC{sec:spec:instruction:2:2}.}
-\label{tab:syntax:2:2}
+\label{tab:instr_syntax:2:2}
 \end{table}                                                                      
 
 % -----------------------------------------------------------------------------
@@ -81,7 +81,7 @@ Class                 & Syntax                     & Section                    
 \end{tabular}
 \end{center}
 \caption{An overview of instruction syntax, including reference to associated semantics: class $2.3$, per \REFSEC{sec:spec:instruction:2:3}.}
-\label{tab:syntax:2:3}
+\label{tab:instr_syntax:2:3}
 \end{table}                                                                      
 
 % -----------------------------------------------------------------------------
@@ -111,7 +111,7 @@ Class                 & Syntax                     & Section                    
 \end{tabular}
 \end{center}
 \caption{An overview of instruction syntax, including reference to associated semantics: class $2.4$, per \REFSEC{sec:spec:instruction:2:4}.}
-\label{tab:syntax:2:4}
+\label{tab:instr_syntax:2:4}
 \end{table}                                                                      
 
 % -----------------------------------------------------------------------------
@@ -121,7 +121,7 @@ Class                 & Syntax                     & Section                    
 \begin{tabular}{|c|l|l|}
 \hline                                                                             
 Class                 & Syntax                     & Section                                    \\
-\hline\hline                                                                             
+\hline\hline                                                                         
 \multirow{15}{*}{2.5} & \XCSYNTAXUSE{xc.madd.2}    & \REFSEC{sec:spec:instruction:xc.madd.2}    \\
                       & \XCSYNTAXUSE{xc.madd.3}    & \REFSEC{sec:spec:instruction:xc.madd.3}    \\
                       & \XCSYNTAXUSE{xc.msub.2}    & \REFSEC{sec:spec:instruction:xc.msub.2}    \\
@@ -141,7 +141,24 @@ Class                 & Syntax                     & Section                    
 \end{tabular}
 \end{center}
 \caption{An overview of instruction syntax, including reference to associated semantics: class $2.5$, per \REFSEC{sec:spec:instruction:2:5}.}
-\label{tab:syntax:2:5}
+\label{tab:instr_syntax:2:5}
+\end{table}                                                                      
+
+% -----------------------------------------------------------------------------
+
+\begin{table}[!ht]
+\begin{center}
+\begin{tabular}{|c|l|l|}
+\hline                                                                             
+Class                 & Syntax                     & Section                                    \\
+\hline\hline                                                                         
+\multirow{ 2}{*}{3.1} & \XCSYNTAXUSE{xc.aessub}    & \REFSEC{sec:spec:instruction:xc.aessub}    \\
+                      & \XCSYNTAXUSE{xc.aesmix}    & \REFSEC{sec:spec:instruction:xc.aesmix}    \\
+\hline                                                                             
+\end{tabular}
+\end{center}
+\caption{An overview of instruction syntax, including reference to associated semantics: class $3.1$, per \REFSEC{sec:spec:instruction:3:1}.}
+\label{tab:instr_syntax:3:1}
 \end{table}                                                                      
 
 % =============================================================================
